Revision history for WebService-Cmis:

2012-09-25 MichaelDaum <github@michaeldaumconsulting.com>

	 * improvements to test suite
	   - test for a proper {testRoot} setting in cmis.cfg
	      - be more robust against a non-configured changeslog
	      - switch off LC_NUMERIC locales in Property tests

2012-09-20 MichaelDaum <github@michaeldaumconsulting.com>

	 * rationalized logging in
	 * added ticket-based authentication

2012-09-11 MichaelDaum <github@michaeldaumconsulting.com>

	 * fixing (build)/prerequisites
	 * skip all server tests when none is configured

2012-08-31 MichaelDaum <github@michaeldaumconsulting.com>

	 * fixed setting summary to the empty string
	 * added cancelCheckOut tests
	   - added a more detailed test to clarify the ckeckin-pwc-cancelchecout behavior
	   - fixed auto-clearing of client cache on certain repository operations

2012-08-29 MichaelDaum <github@michaeldaumconsulting.com>

	 * improved changelog generator
	 * preparing release 0.03
	 * pick up proprietary properties as well
	 * added example code to getAllowableActions()

2012-08-28 MichaelDaum <github@michaeldaumconsulting.com>

	 * fixed pod
	 * implemented setContentStream
	   - rationalized the way objects are changed by version services
	   - removed some unused encoding stuff
	   - rationalited api wrt contentFile/contentData parameters
	 * improved caching; allowing to override cache-control
	 * this is called edit-media, not edit-meta

2012-08-27 MichaelDaum <github@michaeldaumconsulting.com>

	 * fixed pod, fixed example configuration
	 * added getEditLink, getLast, some missing relations

2012-08-24 MichaelDaum <github@michaeldaumconsulting.com>

	 * update signatore
	   (how do I automate this)
	 * removing useless object type mapping
	   ... as we are testing the baseTypeId and not the objectTypeId which
	   might vary a lot.
	 * too many ignore thingies
	 * updating signature
	 * improved tests and pod docu
	   also: