@@ -31,4 +31,4 @@ requires:
   URI: 0
   XML::LibXML: 0
   perl: 5.012001
-version: 0.07
+version: 0.08
