@@ -14,10 +14,10 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 1ca444391d0021bb97629187afb3eb3635521d81 Changes
+SHA1 a6aa623e0511e52e5a00c79b4366b312d017ff43 Changes
 SHA1 b7725aa322a04f09f20980fd151d78f9babdd965 MANIFEST
 SHA1 c848e901d3c945d92a788e89ef840ea47fba105a MANIFEST.SKIP
-SHA1 f96cba967bf96a23f89bebc5692efda861b7a578 META.yml
+SHA1 3f54401b2af066045c11b58a1be7350f89c5010f META.yml
 SHA1 6bc0f8cf8ee27d6584b9fcf48aeead7272f7d011 Makefile.PL
 SHA1 ef01906c6da51f3d5224c49885ee83664feb5f8a README
 SHA1 8842ca38ce27ccf75e1ce8f5dfb93fa62d933b2e inc/Module/AutoInstall.pm
@@ -45,7 +45,7 @@ SHA1 8271611f5c7f9b6e16ef5075353f3b22a72de906 inc/WebService/Cmis/Test/ObjectTyp
 SHA1 1f144b5820b3b21745ad9696b4e5cfa3244efa09 inc/WebService/Cmis/Test/Property.pm
 SHA1 76c1d2cb7a5d583a454bfd123f7daf704d0a665b inc/WebService/Cmis/Test/Repository.pm
 SHA1 c23ff77c707a789bb8be2834655595fd33546493 inc/cmis.cfg.example
-SHA1 e58c719e83efda6ab886cd5378274dc5b15e25e8 lib/WebService/Cmis.pm
+SHA1 686df077052e82252cfff60730ff7685efd835c8 lib/WebService/Cmis.pm
 SHA1 4efd307e6faa70ef2e2f7bbe47e484d5840ca4ea lib/WebService/Cmis/ACE.pm
 SHA1 fabbeba51b3f02ef652841cee9c65cf97e4154c0 lib/WebService/Cmis/ACL.pm
 SHA1 55646c5b446c2b9271353502f8450a16b9478dd6 lib/WebService/Cmis/AtomEntry.pm
@@ -72,7 +72,7 @@ SHA1 21204fff98f2de23dcf8beb103659526d31853fd lib/WebService/Cmis/Property/Integ
 SHA1 5be26b9b80f667e94d98181ad51e1b46bd265f98 lib/WebService/Cmis/Property/String.pm
 SHA1 d46ffd703d68aadf949863d47db90dfa596e2b18 lib/WebService/Cmis/PropertyDefinition.pm
 SHA1 679a05c140fd632bf845d1d6eef9ac045b6ef2d1 lib/WebService/Cmis/Relationship.pm
-SHA1 6c7bbccc05288ef90ca14188b035e8fc6c614002 lib/WebService/Cmis/Repository.pm
+SHA1 c82c35d2efc3791b2dedc86438f676bd2dd78c14 lib/WebService/Cmis/Repository.pm
 SHA1 cda23db4a3ec536829f4d3e31de96c526c1d3870 lib/WebService/Cmis/ServerException.pm
 SHA1 66e81e5bde0e453eb52e9d6772558abfe7be24fb t/00-load.t
 SHA1 3ec6171779122b0bdc69937c283be11b2a15dd89 t/00-signature.t
@@ -89,17 +89,17 @@ SHA1 cc60a75013c07fb9d325c31d96224fced94e6df4 t/10-document.t
 SHA1 291961c62a67e365d66bf639b63348845b6e5a77 t/11-ace.t
 SHA1 6afebf9bf4633b597581df7eba84c3e6a784f8c7 t/boilerplate.t
 SHA1 91734810f49f6125878087d9da7bd746a8ab46d7 t/data/free.jpg
-SHA1 6c552c2ecff38e96b59d5f50fb5fded8c56a76e4 t/manifest.t
+SHA1 3d7c834a6b1b1c2834c661e4cc032c0068970528 t/manifest.t
 SHA1 0b1c5a2d59be6bfa7d60c64cd964fea6a0331705 t/pod-coverage.t
 SHA1 a284683173bea40e9e4679c1a044700443f8a333 t/pod.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.11 (GNU/Linux)
 
-iQEcBAEBAgAGBQJQYbGdAAoJEFbHzikUeAidtzMH/3mjtoYWpeoKw2QcQQ29ZdmX
-x2qL7Ke0+qF4fUDyqNiu62zV9MW+S0+qszPvbFAEmXO6DRPCkuK+yEE+aJ00oRZa
-AdgH9taRSQfKK/oGa6BnPHNnfW8HiSq2GQEZwDnRMJWC8ZQmZ4CdxulPBvmXRKXD
-RAGLNhnpaM4vk8I2F2LikOYuWWwVEVrynZiB6V3Dak4Tnd589ZTvV5V1Ra0iHi2n
-7HZeIXbSXSbT9SfjZl6zGiiddBFADQpdzwrxgY/4lRTXcNkgHuBnh25Niow8t6uo
-qlCyHUHTXVEA5+GyYqzGKku9PZTtg46Ncy15iV0w2z8y0K97f7g9GkX0CJ4ZAIk=
-=+ncb
+iQEcBAEBAgAGBQJQao9KAAoJEFbHzikUeAid3zcIAK0GqLua3HfYXE0AM3Z8W9u+
+fxNrbEK8nP+3F6nK34hm4eH/6HGgTpnf7IiB6gpMwim4doqDAJJofl7pNf6fLSNB
+bquOQQJSkatP0wh6AiID/WOBinJri/wIaf7zv9Y6QxsJuit+3wXIpEwoq0Z4Wu2Q
+rHSPQXXosl2up5KNFVQdBc8O2Ow/V+Ox+La+VgsvqbE8Iz02aylCh7A9OOmO3Mko
+hFb9vvQOkScxDil2Dx2UNg1rLV7+oiigrhtaN7HbUmqQBXrRHyPkY3o5s0dRaUyZ
+DpZeSmR1Qwl9RxcScp58m14P4bM2eO62MJze3aLK6GkPdy1etcws2NeA5WEcqP8=
+=j8Wj
 -----END PGP SIGNATURE-----
